[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/GUI/GenMenu.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/fonts/MenuFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/GUI/fonts/PgBarTexture.tres" type="Texture" id=3]
[ext_resource path="res://addons/openworldterrain/TerrainCache.gd" type="Script" id=4]
[ext_resource path="res://addons/openworldterrain/terrain.png" type="Texture" id=5]
[ext_resource path="res://addons/openworldterrain/WorldConfig.gd" type="Script" id=6]

[node name="GenUI" type="Node" index="0"]

[node name="Menu" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1020.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
stretch_mode = 0
script = ExtResource( 1 )

[node name="Button" type="Button" parent="Menu" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 140.0
margin_right = 870.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.269012, 0.701075, 0.800781, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Generate New World"
flat = false
align = 1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="MainPg" type="TextureProgress" parent="Menu" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 270.0
margin_right = 780.0
margin_bottom = 330.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Rect", "Textures" ]

[node name="SubPg" type="TextureProgress" parent="Menu" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 290.0
margin_top = 370.0
margin_right = 780.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 3 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = true
_sections_unfolded = [ "Radial Fill", "Rect", "Textures" ]

[node name="TerrainCache" type="Node" parent="." index="1"]

script = ExtResource( 4 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}

[node name="WorldConfig" type="Node" parent="TerrainCache" index="0"]

script = ExtResource( 6 )
__meta__ = {
"_editor_icon": ExtResource( 5 )
}
height_map = "res://assets/terrain/Hills 1810 2.jpg"
biome_map = "res://assets/terrain/Hills 1810 2_biome.jpg"
mat = "res://assets/terrain/slatmap.tres"
lib = "res://assets/terrain/terrain.meshlib"
h_factor = 4.0
v_factor = 100.0
patch_size = Vector2( 32, 32 )
offset = Vector2( 16, 16 )
red_biome_indexes = {
"Bush": 1,
"Flower": 3,
"Grass1": 1,
"Rock1": 1,
"Rock2": 1,
"Rocks": 2
}
green_biome_indexes = {
"Bush": 1,
"Fence": 1,
"Grass1": 1,
"Grass2": 1,
"Rocks": 1,
"Tree1": 2,
"Tree2": 2,
"Tree3": 2
}
blue_biome_indexes = {
"Fence": 2,
"Grass1": 1,
"Grass2": 1,
"House1": 2,
"House2": 2,
"Tree3": 2
}


